--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
     <footer>
         <p>© 2024 Prison Break Token. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
+
 </body>
 </html>
