--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header class="header">
+        <div class="logo-section">
+            <img src="logo.png" alt="Prison Break Logo" id="logo" />
+        </div>
         <div class="container">
             <h1 class="title animate-title">Prison Break Token</h1>
             <p class="subtitle">Break free from financial constraints!</p>
@@ -15,7 +18,7 @@
     </header>
     <main>
         <section class="about">
-            <h2>About Prison Break</h2>
+            <h2>About Us</h2>
             <p>
                 Prison Break Token is your key to breaking free from traditional financial systems. Join the revolution and unlock unlimited possibilities!
             </p>
@@ -40,6 +43,5 @@
         <p>© 2024 Prison Break Token. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
-
 </body>
 </html>
