--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo-section">
-            <img src="logoo.jpeg" alt="Prison Break Logo" id="logo" />
+            <img src="logoo.jpg" alt="Prison Break Logo" id="logo" />
         </div>
         <div class="container">
             <h1 class="title animate-title">Prison Break Token</h1>
