--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
             <h2>Donate SOL for Liquidity</h2>
             <p>Your contributions will help grow Prison Break Token. Donate SOL to: <strong>35bqppHs2CtSipRhEtpC7oLwAiZquZAMWh9AdANvHhK7</strong></p>
         </section>
+        <section class="tracker">
+    <h2>Transaction Tracker</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Buyer Address</th>
+                <th>Amount (SOL)</th>
+                <th>Percentage of Total</th>
+            </tr>
+        </thead>
+        <tbody id="transactionTable">
+            <!-- Rows will be dynamically added here -->
+        </tbody>
+    </table>
+</section>
+
     </main>
     <footer>
         <p>© 2024 Prison Break Token. All rights reserved.</p>
