--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </table>
 
     <script>
-        const tokenMintAddress = "YOUR_TOKEN_MINT_ADDRESS"; // Replace with your token mint address
+        const tokenMintAddress = "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263"; // Replace with your token mint address
         const rpcUrl = "https://api.mainnet-beta.solana.com"; // Solana RPC endpoint
 
         async function fetchTransactions() {
