--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Your contributions will help grow Prison Break Token. Donate SOL to: <strong>35bqppHs2CtSipRhEtpC7oLwAiZquZAMWh9AdANvHhK7</strong></p>
         </section>
         <section>
-    <h1>Solana Transaction Tracker</h1>
+    <h1>Prison Break Transaction Tracker</h1>
     <table>
         <thead>
             <tr>
