--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </table>
 
     <script>
-        const tokenMintAddress = "YOUR_TOKEN_MINT_ADDRESS"; // Replace with your token mint address
-        const rpcUrl = "https://api.mainnet-beta.solana.com"; // Solana RPC endpoint
+        const tokenMintAddress = "5zK41efLJDSFNiLsVmHqzWhAgyLsK8ZdydGJEK4tpump"; // Replace with your token mint address
+        const rpcUrl = "https://solana-api.projectserum.com"; // Solana RPC endpoint
 
         async function fetchTransactions() {
             try {
