--- a/index.html
+++ b/index.html
@@ -39,169 +39,11 @@
             <p>Your contributions will help grow Prison Break Token. Donate SOL to: <strong>35bqppHs2CtSipRhEtpC7oLwAiZquZAMWh9AdANvHhK7</strong></p>
         </section>
       <section>
-    <h1>Solana Transaction Tracker</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Buyer Address</th>
-                <th>Amount (SOL)</th>
-                <th>Transaction Signature</th>
-            </tr>
-        </thead>
-        <tbody id="transactionTable">
-            <tr><td colspan="3">Fetching transactions...</td></tr>
-        </tbody>
-    </table>
-
-    <script>
-        const tokenMintAddress = "5zK41efLJDSFNiLsVmHqzWhAgyLsK8ZdydGJEK4tpump"; // Replace with your token mint address
-        const rpcUrl = "https://solana-api.projectserum.com"; // Solana RPC endpoint
-
-        async function fetchTransactions() {
-            try {
-                const response = await fetch(rpcUrl, {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({
-                        jsonrpc: "2.0",
-                        id: 1,
-                        method: "getSignaturesForAddress",
-                        params: [tokenMintAddress, { limit: 10 }]
-                    })
-                });
-
-                const data = await response.json();
-                const signatures = data.result;
-
-                const transactions = await Promise.all(
-                    signatures.map(async (signatureInfo) => {
-                        const txResponse = await fetch(rpcUrl, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                jsonrpc: "2.0",
-                                id: 1,
-                                method: "getTransaction",
-                                params: [signatureInfo.signature, { encoding: "json" }]
-                            })
-                        });
-                        return await txResponse.json();
-                    })
-                );
-
-                const tableBody = document.getElementById("transactionTable");
-                tableBody.innerHTML = ""; // Clear existing rows
-                transactions.forEach((tx, index) => {
-                    if (tx.result) {
-                        const buyer = tx.result.transaction.message.accountKeys[0];
-                        const signature = signatures[index].signature;
-                        const amount = parseAmount(tx.result);
-                        tableBody.innerHTML += `
-                            <tr class="transaction-row">
-                                <td>${buyer}</td>
-                                <td>${amount} SOL</td>
-                                <td>${signature}</td>
-                            </tr>
-                        `;
-                    }
-                });
-            } catch (error) {
-                console.error("Error fetching transactions:", error);
-                document.getElementById("transactionTable").innerHTML = `<tr><td colspan="3">Error fetching transactions</td></tr>`;
-            }
-        }
-
-        function parseAmount(transaction) {
-            const lamports = transaction.meta.postBalances[0] - transaction.meta.preBalances[0];
-            return (lamports / 1e9).toFixed(2); // Convert lamports to SOL
-        }
-
-        // Fetch transactions every 30 seconds for real-time updates
-        setInterval(fetchTransactions, 30000);
-
-        // Initially fetch transactions when the page loads
-        document.addEventListener("DOMContentLoaded", fetchTransactions);
-    </script>
-
-    <style>
-        section {
-            max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-            font-family: 'Arial', sans-serif;
-        }
-
-        h1 {
-            text-align: center;
-            color: #1f4f75;
-            font-size: 2.2em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-            font-size: 1.1em;
-        }
-
-        th {
-            background-color: #007bff;
-            color: white;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        td {
-            background-color: #f9f9f9;
-            color: #333;
-        }
-
-        td:hover {
-            background-color: #e0f7fa;
-            cursor: pointer;
-            color: #007bff;
-        }
-
-        .transaction-row {
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        /* Simple fade-in animation */
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(10px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
-
-        /* Add responsive design for mobile */
-        @media (max-width: 768px) {
-            table {
-                font-size: 0.9em;
-            }
-            th, td {
-                padding: 10px;
-            }
-        }
-    </style>
-</section>
-
+    
+        
     </main>
     <footer>
-        <p>© 2024 Prison Break Token. All rights reserved.</p>
+        <p>No rug. Will make sure to be listed on top tier exchanges such as Binance and OKX.</p>
     </footer>
     <script src="script.js"></script>
 </body>
