--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <section class="links">
             <h2>Important Links</h2>
             <ul>
-                <li><a href="https://t.me/prisonbreaktoken" target="_blank">Join Telegram</a></li>
-                <li><a href="https://etherscan.io/address/0xYourContractAddress" target="_blank">Contract Address</a></li>
-                <li><a href="https://twitter.com/prisonbreaktoken" target="_blank">Follow us on X</a></li>
-                <li><a href="https://coinmarketcap.com/currencies/prison-break-token/" target="_blank">View on CoinMarketCap</a></li>
-                <li><a href="https://pump.fun/" target="_blank">Pump.fun Listing</a></li>
-                <li><a href="https://radium.io/" target="_blank">Trade on Radium</a></li>
+                <li><a href="https://t.me/+2SFtuZQqmvliNmFk" target="_blank">Join Telegram</a></li>
+                <li><a href="https://solscan.com/#" target="_blank">Contract Address</a></li>
+                <li><a href="https://x.com/prsonbreak_meme" target="_blank">Follow us on X</a></li>
+                <li><a href="https://coinmarketcap.com/currencies/#/" target="_blank">View on CoinMarketCap</a></li>
+                <li><a href="https://pump.fun/#" target="_blank">Pump.fun Listing</a></li>
+                <li><a href="raydium.com/#" target="_blank">Trade on Raydium</a></li>
             </ul>
         </section>
         <section class="donate">
