--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="logoo.jpg" alt="Prison Break Logo" id="logo" />
         </div>
         <div class="container">
-            <h1 class="title animate-title">Prison Break Token</h1>
+            <h1 class="title animate-title">Prison Break Meme</h1>
             <p class="subtitle">Break free from financial constraints!</p>
         </div>
     </header>
